# libmtp_qt

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
libmtpviewmodel/: CMakeLists.txt  imtdevice.h  mtpdevice.cpp  mtpdevice.h  mtpdeviceadapter.h  mtpviewmodel.cpp  mtpviewmodel.h  stubmtpdevice.h
